@@ -5,7 +5,9 @@ import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.boot.autoconfigure.domain.EntityScan;
 import org.springframework.context.ConfigurableApplicationContext;
+import org.springframework.context.annotation.ComponentScan;
 import org.springframework.scheduling.annotation.EnableAsync;
 import org.springframework.scheduling.annotation.EnableScheduling;
 
@@ -18,6 +20,7 @@ import java.util.stream.Collectors;
 @Log4j2
 @EnableScheduling
 @EnableAsync
+@EntityScan(basePackages = {"de.olech2412.mensahub.models.authentification", "de.olech2412.mensahub.models.Leipzig"})
 public class MensaHub_DataDispatcher {
 
     private static boolean sendMailManual = false;
@@ -29,7 +32,7 @@ public class MensaHub_DataDispatcher {
         ConfigurableApplicationContext configurableApplicationContext = SpringApplication.run(MensaHub_DataDispatcher.class, args);
         LeipzigDataDispatcher leipzigDataDispatcher = configurableApplicationContext.getBean(LeipzigDataDispatcher.class);
 
-        if(Arrays.stream(args).collect(Collectors.toList()).contains("sendMailManual")){
+        if(Arrays.stream(args).toList().contains("sendMailManual")){
             log.debug("sendMailManual is true");
             sendMailManual = true;
         }
